--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dots_indicator: ^2.1.0
   get: ^4.6.5
   http: ^0.13.5
+  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/image/breakfast0.jpg
+      - assets/image/caption.jpg
+      - assets/image/logo.jpg
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
