--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   google_sign_in: ^5.4.4
+  image_picker: ^0.8.6+1
 
 dev_dependencies:
   flutter_test:
