--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   firebase_core: ^2.4.1
   google_sign_in: ^5.4.4
   image_picker: ^0.8.6+1
+  google_maps_flutter: ^2.2.3
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
